--- a/practice/src/main/res/values/strings.xml
+++ b/practice/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="secoundLayout">두 번째 레이아웃</string>
     <string name="checkView">보입니당</string>
     <string name="move">이동</string>
+    <string name="title_activity_lab2__linear_layout">ActivityLab2_LinearLayout</string>
+    <string name="title_activity_lab2__relative_layout">ActivityLab2_RelativeLayout</string>
 
 </resources>
